clusters/sirius/apps/expensetracker/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: expensetracker-external
  labels:
    app.kubernetes.io/instance: expensetracker
    app.kubernetes.io/name: expensetracker
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - expense.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: expensetracker
          port: 9000
