clusters/sirius/apps/expensetracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: expensetracker
    app.kubernetes.io/name: expensetracker
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: expensetracker-ingress
spec:
  tls:
  - hosts:
    - expense-tracker.sirius.moonblade.work
    secretName: expensetracker-cert
  rules:
  - host: expense-tracker.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expensetracker
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-outer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: expense.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expensetracker
            port:
              name: http
